docs: documentation effort